# gobang

./: .gitignore  AI.cpp  AI.h  CMakeLists.txt  Chess.cpp  Chess.h  GlobalVar.hpp  Main.cpp  Management.cpp  Management.h  Player.cpp  Player.h  README.md  buglist.txt  chess.cpp  chess.h  globalVar.hpp  gobang.aps  gobang.sln  gobang.vcxproj  gobang.vcxproj.filters  gobang.xmind  logger.cpp  logger.h  main.cpp  management.cpp  management.h  myUtils.cpp  myUtils.h  pictureDraw.cpp  pictureDraw.h  player.cpp  player.h  resource.h
Debug/: gobang.exe.recipe  gobang.ilk  gobang.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/gobang.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gobang.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
config/: config  config.txt
src/: common.h  main.cpp
src/ai/: ai.h
src/chess/: CMakeLists.txt  chess.cpp  chess.h  chess_data_board.cpp  chess_data_board.h  chess_data_board_iterm.cpp  chess_data_board_iterm.h  chess_old.h  chessboard.cpp  chessboard.h
src/common/: CMakeLists.txt  common.cpp  common.h  global.cpp  global.h
src/logger/: CMakeLists.txt
src/machine/: machine.cpp  machine.h
src/manage/: CMakeLists.txt  main_menu_manage.cpp  main_menu_manage.h  manage.cpp  manage.h  management_old.cpp  playchess_manage.cpp  playchess_manage.h  select_play_manage.cpp  select_play_manage.h  settlement_manage.cpp  settlement_manage.h  top_manage.cpp  top_manage.h
src/management/: management.cpp
src/player/: CMakeLists.txt  machine.cpp  machine.h  player.cpp  player.h  player_old.h
src/render/: CMakeLists.txt  dataStream.cpp  dataStream.h  dot.cpp  dot.h  global.h  lbitmapFont.cpp  lbitmapFont.h  lbutton.cpp  lbutton.h  ltimer.cpp  ltimer.h  lwindow.cpp  lwindow.h  main_old.cpp  particle.cpp  particle.h  render.cpp  render.h  sdl_button.cpp  sdl_button.h  sdl_button_back.cpp  sdl_button_back.h  sdl_texture.cpp  sdl_texture.h  sdl_timer.cpp  sdl_timer.h  sdl_ttf.cpp  sdl_ttf.h  sdl_window.cpp  sdl_window.h  tile.cpp  tile.h  ttf_result_interface.cpp  ttf_result_interface.h
src/utils/: CMakeLists.txt  myUtils.cpp  myUtils.h
